# apps/application/controllers/apiController.js
@@ -2,13 +2,14 @@
 
 const getGateway = require('../gateway/gateway');
 
-module.exports.metodoPrueba = (req, res) => {
+module.exports.registrarActor = (req, res) => {
+  let nombre = req.body.nombre;
+  let identificacion = req.body.identificacion;
+  let tipo = req.body.tipo;
   return getGateway.then(async ({ gateway, network }) => {
     const contract = network.getContract('fabcar');
-    console.log('llego al endpoint de metodoPrueba');
-    const result = await contract.submitTransaction('metodoPrueba', 'a', 'b', 'c');
-    console.log(result);
-    console.log(result.toString());
-    res.status(200).json(result.toJSON());
+    let args = JSON.stringify([nombre, identificacion, tipo]);
+    await contract.submitTransaction('registerActor', args);
+    res.status(200).json({ msg: 'Actor registrado correctamente' });
   });
 };
