# apps/application/routes/api.js
@@ -5,7 +5,6 @@ let router = express.Router();
 const apiController = require('../controllers/apiController');
 const proveedor = require('../controllers/proveedorController');
 
-router.get('/metodoPrueba', apiController.metodoPrueba);
-router.post('/proveedor', proveedor.registrarProveedor);
+router.post('/actor', apiController.registrarActor);
 
 module.exports = router;
